--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
-
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap');
+@import '../styles/font.css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -119,7 +118,60 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.hero-section {
+  background: url('../../public/hero.jpg') lightgray 50% / cover no-repeat;
+}
+
+.hero-title {
+  text-align: center;
+  font-family: NanumMyeongjo;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 11.2px;
+  background: linear-gradient(134deg, #131313 -88.6%, #FDB147 176.36%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero-since {
+  text-align: center;
+  font-family: NanumMyeongjo;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  letter-spacing: 11.2px;
+  background: linear-gradient(134deg, #131313 -88.6%, #FDB147 176.36%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.hero-slogan {
+  color: #000;
+  text-align: center;
+  font-family: "Montserrat Alternates";
+  font-size: 12px;
+  font-weight: 200;
+  letter-spacing: 3.2px;
+  line-height: normal;
+  font-style: normal;
+}
+
+.hero-button {
+  fill: rgba(255, 255, 255, 0.40);
+
+  stroke-width: 1px;
+  stroke: #131313;
+
+  backdrop-filter: blur(2px);
 }
